# backend/src/openapi_server/models/inline_object.py
@@ -1,0 +1,30 @@
+# coding: utf-8
+
+from __future__ import annotations
+from datetime import date, datetime  # noqa: F401
+
+import re  # noqa: F401
+from typing import Any, Dict, List, Optional  # noqa: F401
+
+from pydantic import AnyUrl, BaseModel, EmailStr, validator  # noqa: F401
+
+
+class InlineObject(BaseModel):
+    """NOTE: This class is auto generated by OpenAPI Generator (https://openapi-generator.tech).
+
+    Do not edit the class manually.
+
+    InlineObject - a model defined in OpenAPI
+
+        object_id: The object_id of this InlineObject [Optional].
+        product_name: The product_name of this InlineObject [Optional].
+        price: The price of this InlineObject [Optional].
+        image: The image of this InlineObject [Optional].
+    """
+
+    object_id: Optional[str] = None
+    product_name: Optional[str] = None
+    price: Optional[int] = None
+    image: Optional[str] = None
+
+InlineObject.update_forward_refs()
