# backend/src/openapi_server/models/inline_object1.py
@@ -9,18 +9,22 @@ from typing import Any, Dict, List, Optional  # noqa: F401
 from pydantic import AnyUrl, BaseModel, EmailStr, validator  # noqa: F401
 
 
-class UserIDPassword(BaseModel):
+class InlineObject1(BaseModel):
     """NOTE: This class is auto generated by OpenAPI Generator (https://openapi-generator.tech).
 
     Do not edit the class manually.
 
-    UserIDPassword - a model defined in OpenAPI
+    InlineObject1 - a model defined in OpenAPI
 
-        user_id: The user_id of this UserIDPassword [Optional].
-        password: The password of this UserIDPassword [Optional].
+        user_name: The user_name of this InlineObject1 [Optional].
+        user_id: The user_id of this InlineObject1 [Optional].
+        password: The password of this InlineObject1 [Optional].
+        e_mail: The e_mail of this InlineObject1 [Optional].
     """
 
+    user_name: Optional[str] = None
     user_id: Optional[str] = None
     password: Optional[str] = None
+    e_mail: Optional[str] = None
 
-UserIDPassword.update_forward_refs()
+InlineObject1.update_forward_refs()
