# backend/src/openapi_server/models/product.py
@@ -9,22 +9,22 @@ from typing import Any, Dict, List, Optional  # noqa: F401
 from pydantic import AnyUrl, BaseModel, EmailStr, validator  # noqa: F401
 
 
-class Parameters(BaseModel):
+class Product(BaseModel):
     """NOTE: This class is auto generated by OpenAPI Generator (https://openapi-generator.tech).
 
     Do not edit the class manually.
 
-    Parameters - a model defined in OpenAPI
+    Product - a model defined in OpenAPI
 
-        object_id: The object_id of this Parameters [Optional].
-        product_name: The product_name of this Parameters [Optional].
-        price: The price of this Parameters [Optional].
-        image_path: The image_path of this Parameters [Optional].
+        object_id: The object_id of this Product [Optional].
+        product_name: The product_name of this Product [Optional].
+        price: The price of this Product [Optional].
+        image_url: The image_url of this Product [Optional].
     """
 
-    object_id: Optional[str] = None
+    object_id: Optional[int] = None
     product_name: Optional[str] = None
     price: Optional[int] = None
-    image_path: Optional[str] = None
+    image_url: Optional[str] = None
 
-Parameters.update_forward_refs()
+Product.update_forward_refs()
