# backend/src/openapi_server/models/user.py
@@ -9,22 +9,22 @@ from typing import Any, Dict, List, Optional  # noqa: F401
 from pydantic import AnyUrl, BaseModel, EmailStr, validator  # noqa: F401
 
 
-class Register(BaseModel):
+class User(BaseModel):
     """NOTE: This class is auto generated by OpenAPI Generator (https://openapi-generator.tech).
 
     Do not edit the class manually.
 
-    Register - a model defined in OpenAPI
+    User - a model defined in OpenAPI
 
-        user_name: The user_name of this Register [Optional].
-        user_id: The user_id of this Register [Optional].
-        password: The password of this Register [Optional].
-        e_mail: The e_mail of this Register [Optional].
+        user_type: The user_type of this User [Optional].
+        user_name: The user_name of this User [Optional].
+        user_id: The user_id of this User [Optional].
+        email: The email of this User [Optional].
     """
 
+    user_type: Optional[str] = None
     user_name: Optional[str] = None
     user_id: Optional[str] = None
-    password: Optional[str] = None
-    e_mail: Optional[str] = None
+    email: Optional[str] = None
 
-Register.update_forward_refs()
+User.update_forward_refs()
